[package]
name = "ffi"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "time"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
